# MORAI-ROS_morai_msgs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docs-requirements.txt  mkdocs.yml  package.xml  versions.json
.github/workflows/: docs-version.yml  docs.yml
24.r2/: index.html
24.r2/messages/CMDConveyor/: index.html
24.r2/messages/CollisionData/: index.html
24.r2/search/: search_index.json
dev/: 404.html
dev/search/: search_index.json
dev/services/: index.html
docs/: generate_docs.py  index.md
docs/messages/: index.md
docs/services/: index.md
msg/: AttachmentDeviceState.msg  CMDConveyor.msg  CollisionData.msg  Competition.msg  Conveyor.msg  CtrlCmd.msg  DdCtrlCmd.msg  DillyCmd.msg  DillyCmdResponse.msg  ENU.msg  ERP42Info.msg  EgoDdVehicleStatus.msg  EgoDetailStatus.msg  EgoNoisyStatus.msg  EgoRotemStatus.msg  EgoVehiclePosition.msg  EgoVehicleStatus.msg  EgoVehicleStatusExtended.msg  EgoVehicleVelocity.msg  EnviroTime.msg  EventInfo.msg  ExternalForce.msg  FMUMultiEgo.msg  FactoryAddress.msg  FaultInjection_Controller.msg  FaultInjection_Response.msg  FaultInjection_Sensor.msg  FaultInjection_Tire.msg  FaultStatusInfo.msg  FaultStatusInfo_Overall.msg  FaultStatusInfo_Sensor.msg  FaultStatusInfo_Vehicle.msg  FullSteer6wUGVCtrlCmd.msg  FullSteer6wUGVStatus.msg  GPSMessage.msg  GVDirectCmd.msg  GVDirectCtrlCmd.msg  GVStateCmd.msg  GenericVehicleControl.msg  GeoVector3Message.msg  (+85 more)
srv/: MoraiEnviroTimeSrv.srv  MoraiWeatherSrv.srv  MultiPlayEventSrv.srv
uem04/messages/: index.html
uem04/search/: search_index.json
(+200 files in other folders)
